fix: change fz for >=850 and elete white spaces in html

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,9 @@ body {
   .wrapper h1 {
     font-size: 4rem;
   }
+  .wrapper label {
+    font-size: 2em;
+  }
   .wrapper .buttons button {
     font-size: 1.6em;
   }
@@ -147,9 +150,6 @@ body {
   }
   .wrapper .yoda-container {
     width: 70%;
-  }
-  .wrapper label {
-    font-size: 1.5rem;
   }
 }
 @media (width >= 1050px) {
