--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -17,6 +17,10 @@
 				font-size: 4rem;
 			}
 
+			label {
+				font-size: 2em;
+			}
+
 			.buttons {
 				button {
 					font-size: 1.6em;
@@ -41,10 +45,6 @@
 
 			.yoda-container {
 				width: 70%;
-			}
-
-			label {
-				font-size: 1.5rem;
 			}
 		}
 	}
